--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eduquest-mvp",
+  "name": "vectus-mvp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,6 @@
     "@vitejs/plugin-react": "^4.0.0",
     "gh-pages": "^6.3.0",
     "vite": "^7.1.7",
-    "vite-plugin-pwa": "^1.0.3"
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
