--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.22",
     "idb": "^7.1.1",
+    "phaser": "^3.90.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
